cmake_minimum_required(VERSION 3.8)
project(Gopherwood)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        CMake/CMakeTestCompileNestedException.cpp
        CMake/CMakeTestCompileSteadyClock.cpp
        CMake/CMakeTestCompileStrerror.cpp
        CMake/FindBoost.cmake
        CMake/FindGsasl.cmake
        CMake/FindQingStor.cmake
        CMake/FindThrift.cmake
        CMake/Functions.cmake
        CMake/Options.cmake
        CMake/Platform.cmake
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Gopherwood.cbp
        cmake-build-debug/Makefile
        docs/bucket_structure.jpg
        docs/bucket_structure.png
        docs/ssdkv-evict.jpg
        docs/ssdkv-evict.png
        docs/ssdkv-read-write.jpg
        docs/ssdkv-read-write.png
        gmock/include/gmock/internal/gmock-generated-internal-utils.h
        gmock/include/gmock/internal/gmock-internal-utils.h
        gmock/include/gmock/internal/gmock-port.h
        gmock/include/gmock/gmock-actions.h
        gmock/include/gmock/gmock-cardinalities.h
        gmock/include/gmock/gmock-generated-actions.h
        gmock/include/gmock/gmock-generated-function-mockers.h
        gmock/include/gmock/gmock-generated-matchers.h
        gmock/include/gmock/gmock-generated-nice-strict.h
        gmock/include/gmock/gmock-matchers.h
        gmock/include/gmock/gmock-more-actions.h
        gmock/include/gmock/gmock-more-matchers.h
        gmock/include/gmock/gmock-spec-builders.h
        gmock/include/gmock/gmock.h
        gmock/src/gmock-cardinalities.cc
        gmock/src/gmock-internal-utils.cc
        gmock/src/gmock-matchers.cc
        gmock/src/gmock-spec-builders.cc
        gmock/src/gmock.cc
        gmock/CMakeLists.txt
        gmock/COPYING
        gtest/include/gtest/internal/gtest-death-test-internal.h
        gtest/include/gtest/internal/gtest-filepath.h
        gtest/include/gtest/internal/gtest-internal.h
        gtest/include/gtest/internal/gtest-linked_ptr.h
        gtest/include/gtest/internal/gtest-param-util-generated.h
        gtest/include/gtest/internal/gtest-param-util.h
        gtest/include/gtest/internal/gtest-port.h
        gtest/include/gtest/internal/gtest-string.h
        gtest/include/gtest/internal/gtest-tuple.h
        gtest/include/gtest/internal/gtest-type-util.h
        gtest/include/gtest/gtest-death-test.h
        gtest/include/gtest/gtest-message.h
        gtest/include/gtest/gtest-param-test.h
        gtest/include/gtest/gtest-printers.h
        gtest/include/gtest/gtest-spi.h
        gtest/include/gtest/gtest-test-part.h
        gtest/include/gtest/gtest-typed-test.h
        gtest/include/gtest/gtest.h
        gtest/include/gtest/gtest_pred_impl.h
        gtest/include/gtest/gtest_prod.h
        gtest/src/gtest-death-test.cc
        gtest/src/gtest-filepath.cc
        gtest/src/gtest-internal-inl.h
        gtest/src/gtest-port.cc
        gtest/src/gtest-printers.cc
        gtest/src/gtest-test-part.cc
        gtest/src/gtest-typed-test.cc
        gtest/src/gtest.cc
        gtest/CMakeLists.txt
        mock/CMakeLists.txt
        mock/TestUtil.h
        sample/CMakeLists.txt
        src/common/Configuration.cpp
        src/common/Configuration.h
        src/common/DateTime.h
        src/common/Exception.cpp
        src/common/Exception.h
        src/common/ExceptionInternal.cpp
        src/common/ExceptionInternal.h
        src/common/Function.h
        src/common/Logger.cpp
        src/common/Logger.h
        src/common/Memory.h
        src/common/StackPrinter.cpp
        src/common/StackPrinter.h
        src/common/Thread.cpp
        src/common/Thread.h
        src/common/Unordered.h
        src/common/XmlConfig.cpp
        src/common/XmlConfig.h
        src/common/LRUCache.cpp
        src/core/FileStatus.h
        src/core/FileSystem.cpp
        src/core/FileSystem.h
        src/core/FileSystemImpl.cpp
        src/core/FileSystemImpl.h
        src/core/FileSystemInter.h
        src/core/FSConfig.h
        src/core/gopherwood.cpp
        src/core/gopherwood.h
        src/core/InputStream.cpp
        src/core/InputStream.h
        src/core/InputStreamImpl.cpp
        src/core/InputStreamImpl.h
        src/core/InputStreamInter.h
        src/core/OutputStream.cpp
        src/core/OutputStream.h
        src/core/OutputStreamImpl.cpp
        src/core/OutputStreamImpl.h
        src/core/OutputStreamInter.h
        src/core/FSConfig.h
        src/core/SharedMemoryManager.cpp
        src/core/SharedMemoryManager.h
        src/core/FSConfig.cpp
        src/core/LogManager.h
        src/core/FileStatus.cpp
        src/core/LogFormat.h
        src/core/LogFormat.cpp
        src/core/QingStoreReadWrite.h
        src/core/QingStoreReadWrite.cpp
        src/network/Socket.h
        src/network/Syscall.h
        src/network/TcpSocket.cpp
        src/network/TcpSocket.h
        src/util/Coding.cpp
        src/util/Coding.h
        src/util/Slice.h
        src/util/Cleanable.h
        src/port/PortPosix.cpp
        src/port/PortPosix.h
        src/CMakeLists.txt
        src/doxyfile.in
        src/libgopherwood.pc
        src/libgopherwood.pc.in
        src/platform.h.in
        test/function/CMakeLists.txt
        test/function/TestFileSystem.cpp
        test/function/TestFileStatus.cpp
        test/function/TestLogFormat.cpp
        test/function/TestSharedMemoryManager.cpp
        test/function/TestReadWriteSeek.cpp
        test/function/TestRandomReadWriteSeek.cpp
        test/function/TestGWAPI.cpp
        test/CMakeLists.txt
        vagrant/id_rsa
        vagrant/id_rsa.pub
        vagrant/vagrant-setup.sh
        vagrant/vagrant-ssh.sh
        vagrant/Vagrantfile
        bootstrap
        CMakeLists.txt
        LICENSE.txt
        README.md)

add_executable(Gopherwood ${SOURCE_FILES})